--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,9 @@
-exportPattern("^[[:alpha:]]+")
+explort(handout.R)
+explort(link_button.R)
+explort(make_sheet.R)
+explort(slidify.R)
+explort(update_course_details.R)
+explort(update_people.R)
+explort(week_button.R)
 import(rmarkdown)
 import(revealjs)
