--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,9 +1,9 @@
-explort(handout.R)
-explort(link_button.R)
-explort(make_sheet.R)
-explort(slidify.R)
-explort(update_course_details.R)
-explort(update_people.R)
-explort(week_button.R)
+export(handout.R)
+export(link_button.R)
+export(make_sheet.R)
+export(slidify.R)
+export(update_course_details.R)
+export(update_people.R)
+export(week_button.R)
 import(rmarkdown)
 import(revealjs)
