--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,9 +1,9 @@
-export(handout.R)
-export(link_button.R)
-export(make_sheet.R)
-export(slidify.R)
-export(update_course_details.R)
-export(update_people.R)
-export(week_button.R)
+export(handout)
+export(link_button)
+export(make_sheet)
+export(slidify)
+export(update_course_details)
+export(update_people)
+export(week_button)
 import(rmarkdown)
 import(revealjs)
