--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,9 +1,9 @@
 export(handout)
-export(link_button)
-export(make_sheet)
+export(link.button)
+export(make.sheet)
 export(slidify)
-export(update_course_details)
-export(update_people)
-export(week_button)
+export(update.course.details)
+export(update.people)
+export(week.button)
 import(rmarkdown)
 import(revealjs)
