added indexing function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,9 +1,13 @@
 export(handout)
+export(fun.index)
 export(link.button)
 export(make.sheet)
 export(slidify)
 export(update.course.details)
 export(update.people)
 export(week.button)
+import(kableExtra)
+import(knitr)
 import(rmarkdown)
 import(revealjs)
+import(tidyverse)
