improved word-limit feture in mark()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,7 @@
 export(handout)
 export(fun.index)
 export(link.button)
+export(mark)
 export(make.sheet)
 export(slidify)
 export(update.course.details)
