--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ import(rcanvas)
 import(knitr)
 import(rmarkdown)
 import(ggplot2)
+import(dplyr)
 import(cowplot)
 importFrom(colortools,complementary)
 importFrom(dplyr,filter)
