housekeeping (reflecting added functions, features, and bug fixes)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(make.paper)
 export(make.sheet)
 export(mark)
 export(question.bank)
+export(show.me)
 export(slidify)
 export(sussex.boilerplate)
 export(week.button)
