--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ export(update.course.details)
 export(update.people)
 export(fun.index)
 export(get.submitted)
+export(get.quick.com)
 export(handout)
 export(link.button)
 export(make.paper)
@@ -13,8 +14,7 @@ export(show.me)
 export(slidify)
 export(sussex.boilerplate)
 export(week.button)
-import(ggplot2)
-import(dplyr)
+import(tidyverse)
 import(cowplot)
 import(rcanvas)
 import(knitr)
