added preview() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(link.button)
 export(make.paper)
 export(make.sheet)
 export(mark)
+export(preview)
 export(question.bank)
 export(show.me)
 export(slidify)
