--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(mark)
 export(preview)
 export(question.bank)
 export(show.me)
+export(slides_to_pdf)
 export(sussex.boilerplate)
 export(xaringan_slides)
 import(rcanvas)
@@ -19,3 +20,4 @@ importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(tibble,tibble)
 importFrom(xtable,sanitize)
+importFrom(blogdown,serve_site)
